<resources>
    <string name="app_name">Guarda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_assigned_tasks">Tareas Asignadas</string>
    <string name="menu_incident_register">Registro de Incidentes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="tipos_incidente">
        <item>Acceso no autorizado</item>
        <item>Pérdida de datos</item>
        <item>Malware</item>
        <item>Phishing</item>
        <item>Otro</item>
    </string-array>
    <string name="welcome_message">Bienvenido al Sistema de Seguridad</string>
    <string name="welcome_image">Imagen de bienvenida</string>
    <string name="photo">Foto</string>
    <string name="login">Iniciar sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="logo">Logo</string>
    <string name="not_member_register">¿No tienes cuenta? Regístrate aquí</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="confirm_registration">Confirmar Registro</string>
    <string name="full_name">Nombre Completo</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="phone_number">Número de Teléfono</string>
    <string name="title_complaints">Registro de Quejas</string>
    <string name="hint_complaint_title">Título de la Queja</string>
    <string name="hint_complaint_description">Descripción de la Queja</string>
    <string name="submit_complaint">Enviar Queja</string>
    <string name="schedule_activities">Programar Actividades</string>
    <string name="activity_time">Hora de la Actividad</string>
    <string name="activity_description">Descripción de la Actividad</string>
    <string name="save_activity">Guardar Actividad</string>
    <string name="menu_complaints_panel">Panel de quejas</string>
    <string name="menu_evaluations_panel">Evaluaciones</string>
</resources>