<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_assigned_tasks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_assigned_tasks" />
        <item
            android:id="@+id/nav_incident_register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_incident_register" />

        <!-- New items for complaints, evaluations, and feedback -->
        <item
            android:id="@+id/nav_complaints_panel"
            android:icon="@drawable/ic_menu_complaints"
            android:title="@string/menu_complaints_panel" />
        <item
            android:id="@+id/nav_evaluations_panel"
            android:icon="@drawable/ic_menu_evaluations"
            android:title="@string/menu_evaluations_panel" />
    </group>
</menu>
